<resources>
    <string name="app_name">POS App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="settings">Settings</string>
    <string name="receipts">Receipts</string>
    <string name="sales">Sales</string>
    <string name="items">Items</string>
    <string name="orders">Orders</string>
    <string name="app">App</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="_00_00">00.00</string>
    <string name="item_name">Item Name</string>
    <string name="x0">x0</string>
    <string name="search">Search</string>
    <string name="check_out_orders">Check Out Orders</string>
    <string name="item_price">Item Price</string>
    <string name="category_name">Category Name</string>

    <string-array name="item_options_array">
        <item>All Items</item>
        <item>Item Category 1</item>
        <item>Item Category 2</item>
        <item>Item Category 3</item>
        <item>Item Category 4</item>
        <item>Item Category 5</item>
        <item>Item Category 6</item>
        <item>Item Category 7</item>
    </string-array>
</resources>