<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/receipts" />
    </group>



    <item
        android:title="@string/app"
        android:id="@+id/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_android_black_24dp"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>